UF-7300: Put back old misspelled enum value
