# src/main/java/se/sundsvall/casemanagement/api/validators/EnvironmentStakeholderRoleConstraintValidator.java
@@ -20,6 +20,7 @@ public class EnvironmentStakeholderRoleConstraintValidator implements Constraint
         // Valid roles
         final Set<StakeholderRole> validRoles = EnumSet.of(
             StakeholderRole.CONTACT_PERSON,
+            StakeholderRole.INVOICE_RECIPENT,
             StakeholderRole.INVOICE_RECIPIENT,
             StakeholderRole.OPERATOR,
             StakeholderRole.APPLICANT,
